test/spec_vectors/local_set/fail/module_25.wat
(module (func $type-empty-vs-i64 (param i64) (result i64) (local.set 0 (i64.const 1))))